--- a/cses/Introductory Problems/weird Algorithm.ipynb
+++ b/cses/Introductory Problems/weird Algorithm.ipynb
@@ -37,15 +37,7 @@
    "execution_count": null,
    "id": "19e58b1c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6 3 10 5 16 8 4 2 1 "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def weired_algo(n:int):\n",
     "    print(n, end=\" \")\n",
@@ -89,18 +81,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ea8efa81",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def missing_number(n, ar:[]):\n",
     "    ip_total = sum(ar)\n",
@@ -140,21 +124,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "fef9b900",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ar1 = \"AAAA\"\n",
     "len(ar1)"
@@ -162,18 +135,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "000eb246",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ar = str(input())\n",
     "def repetitions(ar:str):\n",
@@ -197,18 +162,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5a259af9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4 2 5 3 1 "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ip = int(input(\"Enter your number: \"))\n",
     "n=ip\n",
@@ -228,18 +185,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "376a18bf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 4 1 3 "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ip = int(input(\"Enter your number: \"))\n",
     "n=ip\n",
@@ -254,8 +203,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "08295c85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "1 6 7\n",
+      "4\n",
+      "2 3 4 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Input the number: \"))\n",
+    "a = set()\n",
+    "b = set()\n",
+    "sum = int(n*(n+1)/2)\n",
+    "temp = int(sum/2)\n",
+    "if(sum%2==0):\n",
+    "    for i in range(n, 0, -1):\n",
+    "        if(temp>=i):\n",
+    "            temp = temp - i\n",
+    "            a.add(i)\n",
+    "        else:\n",
+    "            b.add(i) \n",
+    "    print(len(a), end=\"\\n\")\n",
+    "    print(*a)\n",
+    "    print(len(b), end=\"\\n\")\n",
+    "    print(*b)        \n",
+    "else:\n",
+    "    print(\"NO\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e65b2824",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YES\n",
+      "3\n",
+      "1 6 7\n",
+      "4\n",
+      "2 3 4 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tow_set(n:int):\n",
+    "    a = set()\n",
+    "    b = set()\n",
+    "    sum = int(n*(n+1)/2)\n",
+    "    temp = int(sum/2)\n",
+    "    if(sum%2==0):\n",
+    "        for i in range(n, 0, -1):\n",
+    "            if(temp>=i):\n",
+    "                temp = temp - i\n",
+    "                a.add(i)\n",
+    "            else:\n",
+    "                b.add(i) \n",
+    "        print(\"YES\")\n",
+    "                \n",
+    "        print(len(a), end=\"\\n\")\n",
+    "        a_sorted=list(a)\n",
+    "        a_sorted.sort()\n",
+    "        print(*a_sorted)\n",
+    "        print(len(b), end=\"\\n\")\n",
+    "        b_sorted=list(b)\n",
+    "        b_sorted.sort()\n",
+    "        print(*b_sorted)        \n",
+    "    else:\n",
+    "        print(\"NO\")\n",
+    "n = int(input(\"Input the number: \"))   \n",
+    "tow_set(n)     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1728c568",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list=[3, 1, 2]\n",
+    "list.sort()\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "004c92f2",
    "metadata": {},
    "outputs": [],
    "source": []
