updated with leetcode problems

--- a/cses/Introductory Problems/weird Algorithm.ipynb
+++ b/cses/Introductory Problems/weird Algorithm.ipynb
@@ -5,7 +5,7 @@
    "id": "61d1f6b4",
    "metadata": {},
    "source": [
-    "# Weired Algorithm"
+    "# Introductory Problem Set"
    ]
   },
   {
@@ -39,15 +39,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def weired_algo(n:int):\n",
+    "def weired_algo(n: int):\n",
     "    print(n, end=\" \")\n",
-    "    while(n>1):\n",
-    "        if(n%2==0):\n",
-    "            n = n//2\n",
+    "    while n > 1:\n",
+    "        if n % 2 == 0:\n",
+    "            n = n // 2\n",
     "            print(n, end=\" \")\n",
     "        else:\n",
-    "            n = n*3+1\n",
+    "            n = n * 3 + 1\n",
     "            print(n, end=\" \")\n",
+    "\n",
     "\n",
     "n = int(input())\n",
     "weired_algo(n)"
@@ -86,15 +87,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def missing_number(n, ar:[]):\n",
+    "def missing_number(n, ar: []):\n",
     "    ip_total = sum(ar)\n",
-    "    sum_n = (n*(n+1))//2\n",
+    "    sum_n = (n * (n + 1)) // 2\n",
     "    num = sum_n - ip_total\n",
     "    return num\n",
     "\n",
+    "\n",
     "n = int(input())\n",
     "arr = list(map(int, input().split()))\n",
-    "res=missing_number(n, arr)    \n",
+    "res = missing_number(n, arr)\n",
     "print(res)"
    ]
   },
@@ -141,23 +143,27 @@
    "outputs": [],
    "source": [
     "ar = str(input())\n",
-    "def repetitions(ar:str):\n",
+    "\n",
+    "\n",
+    "def repetitions(ar: str):\n",
     "    count = 1\n",
     "    max_count = 1\n",
     "    i = int(1)\n",
-    "    while i<len(ar):\n",
-    "        if(ar[i]==ar[i-1]):\n",
-    "            count+=1\n",
-    "            i+=1\n",
+    "    while i < len(ar):\n",
+    "        if ar[i] == ar[i - 1]:\n",
+    "            count += 1\n",
+    "            i += 1\n",
     "        else:\n",
-    "            if(max_count<count):\n",
-    "                max_count=count\n",
-    "            count=1\n",
-    "            i+=1\n",
-    "    if(count>max_count):\n",
-    "        max_count=count\n",
+    "            if max_count < count:\n",
+    "                max_count = count\n",
+    "            count = 1\n",
+    "            i += 1\n",
+    "    if count > max_count:\n",
+    "        max_count = count\n",
     "    return print(max_count)\n",
-    "repetitions(ar)  "
+    "\n",
+    "\n",
+    "repetitions(ar)"
    ]
   },
   {
@@ -168,19 +174,19 @@
    "outputs": [],
    "source": [
     "ip = int(input(\"Enter your number: \"))\n",
-    "n=ip\n",
-    "if ip<=3:\n",
+    "n = ip\n",
+    "if ip <= 3:\n",
     "    print(\"NO SOLUTION\")\n",
     "else:\n",
-    "    while ip>=1:\n",
-    "        if(ip%2==0):\n",
+    "    while ip >= 1:\n",
+    "        if ip % 2 == 0:\n",
     "            print(ip, end=\" \")\n",
-    "        elif ip==1:\n",
-    "            while(n>=1):\n",
-    "                if(n%2!=0):\n",
+    "        elif ip == 1:\n",
+    "            while n >= 1:\n",
+    "                if n % 2 != 0:\n",
     "                    print(n, end=\" \")\n",
-    "                n-=1    \n",
-    "        ip-=1    "
+    "                n -= 1\n",
+    "        ip -= 1"
    ]
   },
   {
@@ -191,19 +197,19 @@
    "outputs": [],
    "source": [
     "ip = int(input(\"Enter your number: \"))\n",
-    "n=ip\n",
-    "if ip<=3:\n",
+    "n = ip\n",
+    "if ip <= 3:\n",
     "    print(\"NO SOLUTION\")\n",
     "else:\n",
-    "    for i in range(2, n+1, 2):\n",
+    "    for i in range(2, n + 1, 2):\n",
     "        print(i, end=\" \")\n",
-    "    for i in range(1, n+1, 2):\n",
-    "        print(i, end=\" \")   "
+    "    for i in range(1, n + 1, 2):\n",
+    "        print(i, end=\" \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "08295c85",
    "metadata": {},
    "outputs": [
@@ -222,26 +228,26 @@
     "n = int(input(\"Input the number: \"))\n",
     "a = set()\n",
     "b = set()\n",
-    "sum = int(n*(n+1)/2)\n",
-    "temp = int(sum/2)\n",
-    "if(sum%2==0):\n",
+    "sum = int(n * (n + 1) / 2)\n",
+    "temp = int(sum / 2)\n",
+    "if sum % 2 == 0:\n",
     "    for i in range(n, 0, -1):\n",
-    "        if(temp>=i):\n",
+    "        if temp >= i:\n",
     "            temp = temp - i\n",
     "            a.add(i)\n",
     "        else:\n",
-    "            b.add(i) \n",
+    "            b.add(i)\n",
     "    print(len(a), end=\"\\n\")\n",
     "    print(*a)\n",
     "    print(len(b), end=\"\\n\")\n",
-    "    print(*b)        \n",
+    "    print(*b)\n",
     "else:\n",
     "    print(\"NO\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e65b2824",
    "metadata": {},
    "outputs": [
@@ -258,50 +264,60 @@
     }
    ],
    "source": [
-    "def tow_set(n:int):\n",
+    "def two_set(n: int):\n",
     "    a = set()\n",
     "    b = set()\n",
-    "    sum = int(n*(n+1)/2)\n",
-    "    temp = int(sum/2)\n",
-    "    if(sum%2==0):\n",
+    "    sum = int(n * (n + 1) / 2)\n",
+    "    temp = int(sum / 2)\n",
+    "    if sum % 2 == 0:\n",
     "        for i in range(n, 0, -1):\n",
-    "            if(temp>=i):\n",
+    "            if temp >= i:\n",
     "                temp = temp - i\n",
     "                a.add(i)\n",
     "            else:\n",
-    "                b.add(i) \n",
+    "                b.add(i)\n",
     "        print(\"YES\")\n",
-    "                \n",
+    "\n",
     "        print(len(a), end=\"\\n\")\n",
-    "        a_sorted=list(a)\n",
+    "        a_sorted = list(a)\n",
     "        a_sorted.sort()\n",
     "        print(*a_sorted)\n",
     "        print(len(b), end=\"\\n\")\n",
-    "        b_sorted=list(b)\n",
+    "        b_sorted = list(b)\n",
     "        b_sorted.sort()\n",
-    "        print(*b_sorted)        \n",
+    "        print(*b_sorted)\n",
     "    else:\n",
     "        print(\"NO\")\n",
-    "n = int(input(\"Input the number: \"))   \n",
-    "tow_set(n)     "
+    "\n",
+    "\n",
+    "n = int(input(\"Input the number: \"))\n",
+    "two_set(n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1728c568",
+   "execution_count": 9,
+   "id": "90dd9466",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "list=[3, 1, 2]\n",
-    "list.sort()\n",
-    "print(list)"
+    "n = 3\n",
+    "x=2**n\n",
+    "print(x%(10**9 +7))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "004c92f2",
+   "id": "9dfc1ff8",
    "metadata": {},
    "outputs": [],
    "source": []
