two_sum optimized

--- a/leetcode/array.ipynb
+++ b/leetcode/array.ipynb
@@ -41,9 +41,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3baf05db",
+   "metadata": {},
+   "source": [
+    "## Two Sum\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "acfb8b2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got it: 0, 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [2,7,11,15]\n",
+    "target = 9\n",
+    "map = {}\n",
+    "for key, num in enumerate(nums):\n",
+    "    x = target - num\n",
+    "    print(x)\n",
+    "    if x in map:\n",
+    "        print(f\"Got it: {map[x]}, {key}\")\n",
+    "    map[x] = key "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da937094",
    "metadata": {},
    "outputs": [],
    "source": []
